Salesforce CPQ/main/default/objects/DiscountTier__c/DiscountTier__c.object-meta.xml
<CustomObject>
    <customHelpPage>DiscountTierHelp</customHelpPage>
    <description>Discount tier that specifies discount for a given quantity range.</description>
    <label>Discount Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>