Salesforce CPQ/main/default/objects/DiscountTier__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <description>Discount amount applied when quantity falls in this tier.</description>
    <inlineHelpText>Discount amount applied when quantity falls in this tier.</inlineHelpText>
    <label>Discount ({0})</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>