Salesforce CPQ/main/default/objects/DiscountTier__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>The actual price of this discount tier. This field will be populated when a new set of discount schedules are created for a new Order record.</description>
    <inlineHelpText>The actual price of this discount tier. This field will be populated when a new set of discount schedules are created for a new Order record.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>