Salesforce CPQ/main/default/objects/DiscountTier__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Discount Schedule to which this tier belongs.</description>
    <inlineHelpText>Discount Schedule to which this tier belongs.</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>DiscountSchedule__c</referenceTo>
    <relationshipLabel>Discount Tiers</relationshipLabel>
    <relationshipName>DiscountTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>